# Mime

./: .env.example  .gitignore  README.md  dependencytree.txt  main.py  pyproject.toml  requirements.txt  torch.txt
logs/TRIAL_1775298003_preFalse_h256/: events.out.tfevents.1775298003.DESKTOP-IVLSDSE.56248.1
logs/TRIAL_1775298003_preFalse_h256/1775298732.73425/: events.out.tfevents.1775298732.DESKTOP-IVLSDSE.56248.4
logs/TRIAL_1775298003_preFalse_h256/Loss_Combined_train/: events.out.tfevents.1775298195.DESKTOP-IVLSDSE.56248.2
logs/TRIAL_1775298003_preFalse_h256/Loss_Combined_val/: events.out.tfevents.1775298195.DESKTOP-IVLSDSE.56248.3
logs/TRIAL_1775298732_preFalse_h256/: events.out.tfevents.1775298732.DESKTOP-IVLSDSE.56248.5
logs/TRIAL_1775298732_preFalse_h256/1775301360.5585861/: events.out.tfevents.1775301360.DESKTOP-IVLSDSE.56248.8
logs/TRIAL_1775298732_preFalse_h256/Loss_Combined_train/: events.out.tfevents.1775298864.DESKTOP-IVLSDSE.56248.6
logs/TRIAL_1775298732_preFalse_h256/Loss_Combined_val/: events.out.tfevents.1775298864.DESKTOP-IVLSDSE.56248.7
logs/TRIAL_1775301360_preFalse_h512/: events.out.tfevents.1775301360.DESKTOP-IVLSDSE.56248.9
logs/TRIAL_1775301360_preFalse_h512/1775302042.6463382/: events.out.tfevents.1775302042.DESKTOP-IVLSDSE.56248.12
logs/TRIAL_1775301360_preFalse_h512/Loss_Combined_train/: events.out.tfevents.1775301497.DESKTOP-IVLSDSE.56248.10
logs/TRIAL_1775301360_preFalse_h512/Loss_Combined_val/: events.out.tfevents.1775301497.DESKTOP-IVLSDSE.56248.11
logs/TRIAL_1775302042_preFalse_h512/: events.out.tfevents.1775302042.DESKTOP-IVLSDSE.56248.13
logs/TRIAL_1775302042_preFalse_h512/1775304788.8674858/: events.out.tfevents.1775304788.DESKTOP-IVLSDSE.56248.16
logs/TRIAL_1775302042_preFalse_h512/Loss_Combined_train/: events.out.tfevents.1775302178.DESKTOP-IVLSDSE.56248.14
logs/TRIAL_1775302042_preFalse_h512/Loss_Combined_val/: events.out.tfevents.1775302178.DESKTOP-IVLSDSE.56248.15
logs/TRIAL_1775304788_preFalse_h256/: events.out.tfevents.1775304788.DESKTOP-IVLSDSE.56248.17
logs/TRIAL_1775304788_preFalse_h256/1775305442.1638818/: events.out.tfevents.1775305442.DESKTOP-IVLSDSE.56248.20
logs/TRIAL_1775304788_preFalse_h256/Loss_Combined_train/: events.out.tfevents.1775304919.DESKTOP-IVLSDSE.56248.18
logs/TRIAL_1775304788_preFalse_h256/Loss_Combined_val/: events.out.tfevents.1775304919.DESKTOP-IVLSDSE.56248.19
logs/TRIAL_1775305442_preFalse_h256/: events.out.tfevents.1775305442.DESKTOP-IVLSDSE.56248.21
logs/TRIAL_1775305442_preFalse_h256/1775308057.8670092/: events.out.tfevents.1775308057.DESKTOP-IVLSDSE.56248.24
logs/TRIAL_1775305442_preFalse_h256/Loss_Combined_train/: events.out.tfevents.1775305573.DESKTOP-IVLSDSE.56248.22
logs/TRIAL_1775305442_preFalse_h256/Loss_Combined_val/: events.out.tfevents.1775305573.DESKTOP-IVLSDSE.56248.23
logs/TRIAL_1775308057_preFalse_h512/: events.out.tfevents.1775308057.DESKTOP-IVLSDSE.56248.25
logs/TRIAL_1775308057_preFalse_h512/1775308743.1566224/: events.out.tfevents.1775308743.DESKTOP-IVLSDSE.56248.28
logs/TRIAL_1775308057_preFalse_h512/Loss_Combined_train/: events.out.tfevents.1775308195.DESKTOP-IVLSDSE.56248.26
logs/TRIAL_1775308057_preFalse_h512/Loss_Combined_val/: events.out.tfevents.1775308195.DESKTOP-IVLSDSE.56248.27
logs/TRIAL_1775308743_preFalse_h512/: events.out.tfevents.1775308743.DESKTOP-IVLSDSE.56248.29
logs/TRIAL_1775308743_preFalse_h512/1775311480.9883382/: events.out.tfevents.1775311480.DESKTOP-IVLSDSE.56248.32
logs/TRIAL_1775308743_preFalse_h512/Loss_Combined_train/: events.out.tfevents.1775308881.DESKTOP-IVLSDSE.56248.30
logs/TRIAL_1775308743_preFalse_h512/Loss_Combined_val/: events.out.tfevents.1775308881.DESKTOP-IVLSDSE.56248.31
notebooks/: ABS_train.ipynb
reports/proposal/: Makefile  front.tex  main.bib  main.tex
reports/proposal/chapters/: proposal.tex
reports/report/: .gitignore  front.tex  main.bib  main.tex
reports/report/appendix/: matlab_plots.tex
reports/report/chapters/: discussion.tex  introduction.tex  methods.tex  results.tex
reports/report/chapters/tmp/: introduction copy.tex  methods copy.tex
resources/: proposal.tex
src/: abs_stream.py  abs_test.py  client_main.py  sts_main.py  video_map_test.py
src/utils/: __init__.py  arkit_renderer.py  inference_engine_fast.py  inference_engine_slow.py  media_bridge.py  mt_engine.py  overlay_engine.py  stt_engine.py  tts_engine.py  video_client.py
