[project]
name = "mime"
version = "0.1.0"
description = "Live AI Translation & 3D Mouth Overlay Pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
dependencies = [
    "datasets>=4.8.4",
    "groq>=1.1.2",
    "huggingface-hub>=1.8.0",
    "ipykernel>=7.2.0",
    "librosa>=0.11.0",
    "mediapipe>=0.10.33",
    "numpy==1.24.3",
    "opencv-python==4.11.0.86",
    "pyaudio>=0.2.14",
    "pyrender>=0.1.45",
    "python-dotenv>=1.2.2",
    "pyvirtualcam>=0.15.0",
    "tensorboard>=2.20.0",
    "torch==2.1.0+cu118",
    "torchaudio==2.1.0+cu118",
    "torchvision==0.16.0+cu118",
    "trimesh>=4.11.5",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
]

[tool.uv]
dependency-metadata = [
    { name = "torch", version = "2.1.0+cu118", requires-dist = [
        "filelock",
        "fsspec",
        "jinja2",
        "networkx==3.4.2; python_full_version < '3.11'",
        "networkx==3.6.1; python_full_version >= '3.11'",
        "sympy",
        "triton==2.1.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
        "typing-extensions",
    ] },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
