[project]
name = "mime"
version = "0.1.0"
description = "Live AI Translation & 3D Mouth Overlay Pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "click==8.3.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "dataclasses-json==0.6.7",
    "decompyle3==3.9.3",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "filelock==3.25.2",
    "freetype-py==2.5.1",
    "fsspec==2026.3.0",
    "glfw==2.10.0",
    "gltflib==1.0.13",
    "groq==1.1.2",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.9.0",
    "idna==3.11",
    "imageio==2.37.3",
    "iopath==0.1.10",
    "ipython==8.39.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyterlab-widgets==3.0.16",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "mypy-extensions==1.1.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "opencv-python==4.13.0.92",
    "packaging==26.0",
    "parso==0.8.6",
    "pillow==12.1.1",
    "portalocker==3.2.0",
    "prompt-toolkit==3.0.52",
    "pure-eval==0.2.3",
    "pyaudio==0.2.14",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyglet==2.1.14",
    "pygments==2.20.0",
    "pyopengl==3.1.10",
    "pyopengl-accelerate==3.1.10",
    "pyrender",
    "python-dotenv==1.2.2",
    "pyvirtualcam==0.15.0",
    "pywin32==311; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "rich==14.3.3",
    "scipy==1.15.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "spark-parser==1.9.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "torch==2.1.0+cu118",
    "torchaudio==2.1.0+cu118",
    "torchvision==0.16.0+cu118",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "trimesh==4.11.5",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uv==0.11.3",
    "wcwidth==0.6.0",
    "widgetsnbextension==4.0.15",
    "xdis==6.1.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
pyrender = { git = "https://github.com/aelzeiny/pyrender", rev = "24f39dfbc0ad0215979fcf4ab0d2debee345578e" }
