[project]
name = "mime"
version = "0.1.0"
description = "Live AI Translation & 3D Mouth Overlay Pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
dependencies = [
    "datasets>=4.8.4",
    "groq==1.1.2",
    "huggingface-hub==1.9.0",
    "librosa>=0.11.0",
    "mediapipe>=0.10.33",
    "numpy==2.2.6",
    "opencv-python==4.13.0.92",
    "pyaudio==0.2.14",
    "pyrender",
    "gltflib==1.0.13",
    "python-dotenv==1.2.2",
    "pyvirtualcam==0.15.0",
    "pywin32==311; sys_platform == 'win32'",
    "tensorboard>=2.20.0",
    "torch==2.7.1; sys_platform == 'darwin'",
    "torchaudio==2.7.1; sys_platform == 'darwin'",
    "torchvision==0.22.1; sys_platform == 'darwin'",
    "torch==2.7.1+cu118; sys_platform == 'win32'",
    "torchaudio==2.7.1+cu118; sys_platform == 'win32'",
    "torchvision==0.22.1+cu118; sys_platform == 'win32'",
    "trimesh>=4.11.5",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-pypi"
url = "https://pypi.org/simple"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
    { index = "pytorch-pypi", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
    { index = "pytorch-pypi", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
    { index = "pytorch-pypi", marker = "sys_platform == 'darwin'" },
]
pyrender = { git = "https://github.com/aelzeiny/pyrender", rev = "24f39dfbc0ad0215979fcf4ab0d2debee345578e" }

[tool.uv]
dependency-metadata = [
    { name = "torch", version = "2.1.0+cu118", requires-dist = [
        "filelock",
        "fsspec",
        "jinja2",
        "networkx==3.4.2; python_full_version < '3.11'",
        "networkx==3.6.1; python_full_version >= '3.11'",
        "sympy",
        "triton==2.1.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
        "typing-extensions",
    ] },
]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'"
]